test_suite/tests/errors/unknown_block_attribute.stderr
error: Unknown block attribute `unknown_attr`. Expected attribute(s): `async`, `id`
 --> tests/errors/unknown_block_attribute.rs:5:12
  |
5 |         #![unknown_attr]
  |            ^^^^^^^^^^^^
